--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
                     <li class="forma_de_luta">Adagas</li>
                 </ul>
 
-                <p class="descricao">Pai do nosso prota, ficou preso em um portal de Rank-A por 10 anos, foi encontrados
-                    por americanos em um portal nos estados unidos, e passou a ser acusado de monstro que tomou a forma
+                <p class="descricao">Pai do nosso prota, ficou preso em um portal de Rank-A por 10 anos, foi encontrado
+                    por americanos em um portal nos estados unidos, e passou a ser acusado de um monstro que tenha
+                    tomado a forma
                     de um humano por carregar uma aura tão forte quanto a de um portal de Rank-A.
                 </p>
             </li>
