papel de parede

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./Src/css/body/body.css">
     <link rel="stylesheet" href="./Src/css/body/root.css">
     <link rel="stylesheet" href="./Src/css/cabecalho/cabecalho.css">
-    <link rel="stylesheet" href="./Src/css/cabecalho/botao.css">
     <link rel="stylesheet" href="./Src/css/cabecalho/logo.css">
     <link rel="stylesheet" href="./Src/css/cabecalho/musica.css">
     <link rel="stylesheet" href="./Src/css/cabecalho/lista.css">
@@ -49,7 +48,7 @@
         </nav>
     </header>
     <section class="titulos">
-        <img src="/Imagem/Papel de parede.png" alt="papel_de_parede" class="papel_de_parede">
+        <img src="/Imagem/solo leveling.gif" alt="papel_de_parede" class="papel_de_parede">
         <h1 class="titulo_principal">Oi, nesse documento HTMl irei praticar <strong class="titulo_destaque"> TUDO
             </strong> que aprendi com o curso Alura!</h1>
     </section>
