--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="./cards-familia.css">
     <link rel="stylesheet" href="./cards-inimigos.css">
     <link rel="stylesheet" href="./cards-aliados.css">
+    <link rel="stylesheet" href="./Src/css/titulo/titulos-secao.css">
+    <link rel="stylesheet" href="./Src/css/body/todos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Handjet:wght@400;700&display=swap">
@@ -49,8 +51,6 @@
     </header>
     <section class="titulos">
         <img src="/Imagem/solo leveling.gif" alt="papel_de_parede" class="papel_de_parede">
-        <h1 class="titulo_principal">Oi, nesse documento HTMl irei praticar <strong class="titulo_destaque"> TUDO
-            </strong> que aprendi com o curso Alura!</h1>
     </section>
     <section class="primeiro_setor">
         <ul class="descricao_vai">
@@ -72,6 +72,7 @@
             </li>
         </ul>
     </section>
+    <h2 class="titulos_secao">Familiares</h2>
     <section class="cards_familia">
         <ul class="listagem">
             <li class="cartao">
@@ -168,7 +169,7 @@
             </li>
         </ul>
     </section>
-
+    <h2 class="titulos_secao">Inimigos</h2>
     <section class="cards_inimigos">
         <ul class="listagem">
             <li class="cartao">
@@ -294,7 +295,7 @@
             </li>
         </ul>
     </section>
-
+    <h2 class="titulos_secao">Sombras</h2>
     <section class="cards_aliados">
         <ul class="listagem">
             <li class="cartao">
@@ -406,7 +407,7 @@
             <li class="cartao">
                 <div calss="informacoes">
                     <span>Aliados</span>
-                    <span>003#Kaisel</span>
+                    <span>007#Kaisel</span>
                 </div>
 
                 <img src="./Imagem/Wyvern.PNG" alt="sombra" class="imagem_png">
