--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </nav>
     </header>
     <section class="titulos">
-        <img src="/Imagem/solo leveling.gif" alt="papel_de_parede" class="papel_de_parede">
+        <h1 class="titulo-principal"><img src="/Imagem/solo leveling.gif" alt="papel_de_parede" class="papel_de_parede">
+        </h1>
     </section>
     <section class="primeiro_setor">
         <ul class="descricao_vai">
