--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         aos
                         poucos, o
                         mais
-                        forte do mundo, aqueles que em algum momento zombaram ou criticaram
+                        forte de todos, calando aqueles que em algum momento zombaram ou criticaram
                         ele. Nome do protagonista: Sung Jin
                         Woo.</strong></p>
                 <a href="https://mangalivre.net/manga/solo-leveling/7702" class="solo"> Clique para conhecer!</a>
