mudei coisa pa carai

--- a/index.html
+++ b/index.html
@@ -28,11 +28,26 @@
     <link rel="stylesheet" href="./Src/css/titulo/titulo-destaque.css">
     <link rel="stylesheet" href="./Src/css/titulo/titulo-principal.css">
     <link rel="stylesheet" href="./scroll.css">
-    <link rel="stylesheet" href="./cards-familia.css">
-    <link rel="stylesheet" href="./cards-inimigos.css">
-    <link rel="stylesheet" href="./cards-aliados.css">
+    <link rel="stylesheet" href="./Src/css/cards/cards-aliados.css">
+    <link rel="stylesheet" href="./Src/css/cards/cards-familia.css">
+    <link rel="stylesheet" href="./Src/css/cards/cards-inimigos.css">
     <link rel="stylesheet" href="./Src/css/titulo/titulos-secao.css">
     <link rel="stylesheet" href="./Src/css/body/todos.css">
+    <link rel="stylesheet" href="./Src/css/cards/informacoes/wikipidia.css">
+    <link rel="stylesheet" href="./Src/css/cabecalho/seja-bem-vindo.css">
+    <link rel="stylesheet" href="./Src/css/primeiro-setor/descricao_vai.css">
+    <link rel="stylesheet" href="./Src/css/bottom/bottom-titulo.css">
+    <link rel="stylesheet" href="./Src/css/bottom/bottom.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/cartao-protagonista.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/cards-protagonista.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/imagem-png-protagonista.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/informacoes-protagonista.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/listagem-protagonista.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/forma-de-luta-do-sung.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/unico.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/unico-rank.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/wikipidia-sung.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/descricao-sung.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Handjet:wght@400;700&display=swap">
@@ -45,12 +60,13 @@
         <nav class="navegacao">
             <ul class="lista">
                 <li class="lista-baguncada"><a href="https://www.youtube.com/watch?v=fnamLZb9itw" class="musica">
-                        Musiquinha legal</a></li>
+                        Click aqui hehe!</a></li>
             </ul>
         </nav>
     </header>
     <section class="titulos">
-        <h1 class="titulo-principal"><img src="./Imagem/solo leveling.gif" alt="papel_de_parede" class="papel_de_parede">
+        <h1 class="titulo-principal"><img src="./Imagem/Papel de parede.png" alt="papel_de_parede"
+                class="papel_de_parede">
         </h1>
     </section>
     <section class="primeiro_setor">
@@ -69,9 +85,34 @@
                         forte de todos, calando aqueles que em algum momento zombaram ou criticaram
                         ele. Nome do protagonista: Sung Jin
                         Woo.</strong></p>
-                <a href="https://mangalivre.net/manga/solo-leveling/7702" class="solo"> Clique para conhecer!</a>
+                <a href="https://mangalivre.net/manga/solo-leveling/7702" target="_blank" class="solo"> Clique para
+                    conhecer!</a>
             </li>
         </ul>
+    </section>
+    <h2 class="titulos_secao">Protagonista</h2>
+    <section class="cards_protagonista">
+        <ul class="listagem_protagonista">
+            <li class="cartao_protagonista">
+                <div class="informacoes_protagonista">
+                    <span>Sung Jin Woo</span>
+                </div>
+
+                <img src="./Imagem/sung-jin-woo-solo-leveling3.jpg" alt="mãe do sung" class="imagem_png_protagonista">
+
+                <ul class="unico">
+                    <li class="unico_rank">Dono da porra toda</li>
+                    <li class="forma_de_luta_do_sung">Necromancia</li>
+                </ul>
+
+                <p class="descricao_sung">Sung Jin Woo, o nosso protagonista inicialmente depertou como um caçador de
+                    Rank-E, mas mesmo entre os caçadores de Rank-E, Sung Jin Woo, era o mais fraco de todos, sendo assim
+                    declarado por todos o mais fraco do mundo, mas tudo mudou após entrar em uma dungeon de Rank-C
+                    com covil duplo.</p>
+                <a class="wikipidia_sung" href="https://solo-leveling.fandom.com/wiki/Sung_Jinwoo" target="_blank">Mais
+                    sobre!</a>
+            </li>
+
     </section>
     <h2 class="titulos_secao">Familiares</h2>
     <section class="cards_familia">
@@ -92,6 +133,8 @@
                 <p class="descricao">Definitivamente uma das pessoas mais importantes para o nosso protagonista. Entrou
                     em sono eterno após o despertar de Sung Jin Woo como caçador, sendo curada mais tarde no Manhwa por
                     uma poção criada pelo prota.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Park_Kyung-Hye" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -112,6 +155,8 @@
                     tomado a forma
                     de um humano por carregar uma aura tão forte quanto a de um portal de Rank-A.
                 </p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Sung_Il-Hwan" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -131,6 +176,8 @@
                     resgatada por seu irmão que chegou voando em seu dragão em forma de sombra. Uma pessoa muito
                     importante para todos aqueles que leem o Manhwa por ser tão carismatica e dar tanta vida a leitura.
                 </p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Sung_Jinah" target="_blank">Mais
+                    sobre!</a>
             </li>
 
 
@@ -144,12 +191,13 @@
 
                 <ul class="ranks">
                     <li class="rank_s">Rank-S</li>
-                    <li class="forma_de_luta">Qualquer tipo de espada.</li>
+                    <li class="forma_de_luta">Qualquer espada.</li>
                 </ul>
 
                 <p class="descricao">Tem uma forte sencibilidade á cheiros, sendo eles fracos ou fortes, podendo até
                     vomitar com um perfume qualquer.</p>
-
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Cha_Hae-In" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -167,6 +215,8 @@
 
                 <p class="descricao">Filho do dono da rede de empresas Yoo Jin arcteturas, desistiu de assumir a empresa
                     para se juntar ao Sung Jin Woo em sua jornada.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Yoo_Jinho" target="_blank">Mais
+                    sobre!</a>
             </li>
         </ul>
     </section>
@@ -179,20 +229,22 @@
                     <span>Estatua</span>
                 </div>
 
-                <img src="./Imagem/estatua.gif" alt="inimigo" class="imagem_png">
+                <img src="./Imagem/estatua2.PNG" alt="inimigo" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="rank_s">Deus</li>
-                    <li class="forma_de_luta">Laser dos olhos</li>
+                    <li class="forma_de_luta">Punhos</li>
                 </ul>
 
                 <p class="descricao">Inimigo do qual deu inicio a toda a história de Solo Leveling.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Statue_of_God" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
                 <div class="informacoes">
                     <span>Inimigos</span>
-                    <span>001#Hwang Dong-Su</span>
+                    <span>001#Hwang Dong-Soo</span>
                 </div>
 
                 <img src="./Imagem/Hwang Dong-Su.jpg" alt="inimigo" class="imagem_png">
@@ -205,6 +257,8 @@
                 <p class="descricao">Um dos maiores inimigos do nosso prota, bem tarde no Manhwa Dong-Su sequestra
                     Jin-ho, deixando Sung Jin-Woo com muita raiva, o que o leva a matar Dong-Su, e o tranformar em uma
                     de suas sombras.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Hwang_Dongsoo" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -223,6 +277,8 @@
                 <p class="descricao">O monarca do gelo, um dos monarcas que vem atrás de Sung Jin Woo, para mata-lo, e
                     também para
                     destruir o mundo, mas é impedido pelo nosso protagonista.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Frost_Monarch" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -241,12 +297,14 @@
                 <p class="descricao">O monarca das feras, se junta com o monarca do gelo e se torna mais um dos monarcas
                     que vem atrás de Sung Jin Woo, para mata-lo, e também para
                     destruir o mundo, mas é impedido pelo nosso protagonista.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Beast_Monarch" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
                 <div class="informacoes">
                     <span>Inimigos</span>
-                    <span>004#Monarca dos Insetos</span>
+                    <span>004#Querehsha</span>
                 </div>
 
                 <img src="./Imagem/Monarca dos Insetos.jpg" alt="inimigo" class="imagem_png">
@@ -258,12 +316,14 @@
 
                 <p class="descricao">Umas das primeiras a morrer na luta que ocorre na cidade entra Sung Jin Woo e os
                     monarcas, não que ela seja fraca, mas o nosso prota saí vitorioso mais uma vez.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Querehsha" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
                 <div class="informacoes">
                     <span>Inimigos</span>
-                    <span>005#Monarca das Chamas Brancas</span>
+                    <span>005#Baran</span>
                 </div>
 
                 <img src="./Imagem/Monarca das Chamas Brancas2.PNG" alt="inimigo" class="imagem_png">
@@ -275,12 +335,14 @@
 
                 <p class="descricao">Não teve muita relevância no Manhwa, mas foi um dos monarcas que participaram da
                     grande guerra, morreu no castelo demoniaco onde era o Rei.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Baran" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
                 <div class="informacoes">
                     <span>Inimigos</span>
-                    <span>006#Monarca dos Gigantes</span>
+                    <span>006#Legia</span>
                 </div>
 
                 <img src="./Imagem/Monarca dos Gigantes2.jpg" alt="inimigo" class="imagem_png">
@@ -291,8 +353,10 @@
                 </ul>
 
                 <p class="descricao">Encontrado por Sung Jin Woo acorrentado dentro de um portal de Rank-S que aprece em
-                    Nova Iorque, o Monarca dos Gigante tenta enganar Sung Jin Woo a ajuda-lo a extinguir a humanidade,
+                    Nova Iorque, Legia tenta enganar Sung Jin Woo a ajuda-lo a extinguir a humanidade,
                     mas falha e é morto por nosso protagonista.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Legia" target="_blank">Mais
+                    sobre!</a>
             </li>
         </ul>
     </section>
@@ -315,6 +379,8 @@
                 <p class="descricao">A primeira sombra de Rank-S do nosso protagonista, o ajudou em muitos momentos de
                     dificuldade, e esteve com ele desde o inicio de sua jornada como Monarca das Sombras.
                 </p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Igris" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -333,6 +399,8 @@
                 <p class="descricao">Antigamente uma formiga rei, que dominou a Ilha de Jeju, após matar muitos
                     caçadores de Rank-S da guilda japonesa, Sung Jin Woo chega na ilha e o mata, o tranformando em sua
                     sombra logo depois.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Beru" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -345,12 +413,14 @@
 
                 <ul class="ranks">
                     <li class="rank_ss">Rank-A</li>
-                    <li class="forma_de_luta">Machado Pesado e Escudo Grande</li>
+                    <li class="forma_de_luta">Machado Pesado</li>
                 </ul>
 
                 <p class="descricao">Antes de se tornar uma sombra, era um humano de Rank-A, que desprezava caçadores de
                     rank baixo, deixou Sung Jin Woo e seu grupo para a morte em um portal vermelho, morto elo nosso
                     prota, e virando mais uma de susas sombras logo depois.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Iron" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -368,6 +438,8 @@
 
                 <p class="descricao">Lider dos ursos brancos do portal vermelho de Rank-A, após perder todos os seus
                     aliados ursos, Igris o mata e trás sua cabeça como presente para Sung.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Tank" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -379,12 +451,14 @@
                 <img src="./Imagem/Greed.PNG" alt="sombra" class="imagem_png">
 
                 <ul class="ranks">
-                    <li class="rank_ss">Rank-s</li>
+                    <li class="rank_ss">Rank-S</li>
                     <li class="forma_de_luta">Punhos</li>
                 </ul>
 
                 <p class="descricao">Após sequestrar Yoo Jin-Ho e o torturar, Hwang Dong-Su é morto por Sung, virando
                     ali uma de suas sombras.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Greed" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -396,13 +470,15 @@
                 <img src="./Imagem/Bellion.PNG" alt="sombra" class="imagem_png">
 
                 <ul class="ranks">
-                    <li class="rank_ss">Rank-ss</li>
+                    <li class="rank_ss">Rank-SS</li>
                     <li class="forma_de_luta">Espada Chicote</li>
                 </ul>
 
                 <p class="descricao">General do exercito do antigo Monarca das Sombras, desce dos céus, saindo de um
                     portal de rank-s que cobre toda a cidade de Seoul onde nosso prota vive, se tornando ali, parte do
                     exercito de sombras do Sung.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Bellion" target="_blank">Mais
+                    sobre!</a>
             </li>
 
             <li class="cartao">
@@ -414,16 +490,43 @@
                 <img src="./Imagem/Wyvern.PNG" alt="sombra" class="imagem_png">
 
                 <ul class="ranks">
-                    <li class="rank_ss">Rank-s</li>
+                    <li class="rank_ss">Rank-S</li>
                     <li class="forma_de_luta">Bafo de dragão</li>
                 </ul>
 
                 <p class="descricao">Dração do Monarca dos Demonios, se tornou sombra de Sung, após Sung derrotar o
                     Monarca dos Demonios. Principal meio de transporte do nosso prota.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Kaisel" target="_blank">Mais
+                    sobre!</a>
+            </li>
+
+            <li class="cartao">
+                <div calss="informacoes">
+                    <span>Aliados</span>
+                    <span>008#Ashborn</span>
+                </div>
+
+                <img src="./Imagem/ashborn.PNG" alt="sombra" class="imagem_png">
+
+                <ul class="ranks">
+                    <li class="monarca">Monarca</li>
+                    <li class="forma_de_luta">Necromancia</li>
+                </ul>
+
+                <p class="descricao">Ashborn era o rei dos mortos e Monarca das Sombras antes de Sung Jin Woo. Ele
+                    também era o Fragmento da Luz Brilhante mais forte.</p>
+                <a class="wikipidia" href="https://solo-leveling.fandom.com/wiki/Ashborn" target="_blank">Mais
+                    sobre!</a>
             </li>
 
         </ul>
     </section>
+
+    <section class="bottom">
+        <h1 class="bottom_titulo"> Criado e modelado por Cleriton Mota Melo Filho, apenas mais um fã de Solo Leveling.
+            Meu primeiro site, obrigado a quem visitar e apoiar meu pequeno trabalhinho.</h1>
+    </section>
+
 </body>
 
 </html>
