--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="./Src/css/cards-protagonista/unico-rank.css">
     <link rel="stylesheet" href="./Src/css/cards-protagonista/wikipidia-sung.css">
     <link rel="stylesheet" href="./Src/css/cards-protagonista/descricao-sung.css">
+    <link rel="stylesheet" href="./Src/css/cards-protagonista/imagem-sung.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Handjet:wght@400;700&display=swap">
@@ -92,14 +93,15 @@
     </section>
     <h2 class="titulos_secao">Protagonista</h2>
     <section class="cards_protagonista">
+        <div class="informacoes_protagonista">
+            <span>Sung Jin Woo</span>
+        </div>
+        <div class="imagem_sung">
+            <img src="./Imagem/sung-jin-woo-solo-leveling3.jpg" alt="mãe do sung" class="imagem_png_protagonista">
+        </div>
         <ul class="listagem_protagonista">
             <li class="cartao_protagonista">
-                <div class="informacoes_protagonista">
-                    <span>Sung Jin Woo</span>
-                </div>
-
-                <img src="./Imagem/sung-jin-woo-solo-leveling3.jpg" alt="mãe do sung" class="imagem_png_protagonista">
-
+                
                 <ul class="unico">
                     <li class="unico_rank">Dono da porra toda</li>
                     <li class="forma_de_luta_do_sung">Necromancia</li>
