--- a/index.html
+++ b/index.html
@@ -73,19 +73,16 @@
     <section class="primeiro_setor">
         <ul class="descricao_vai">
             <li class="vai_conhecer">
-                <p class="texto_descritivo"><strong class="texto_destaque">Solo-Leveling é um Manhwa, mas também é
-                        conhecido
-                        por algumas pessoas
-                        como história
-                        em quadrinhos, nesse
-                        manhwa é falado sobre
-                        um garoto onde no inicio era o mais fraco do mundo, mas durante o Manhwa ele vai se tornando,
-                        aos
-                        poucos, o
-                        mais
-                        forte de todos, calando aqueles que em algum momento zombaram ou criticaram
-                        ele. Nome do protagonista: Sung Jin
-                        Woo.</strong></p>
+                <p class="texto_descritivo"><strong class="texto_destaque">Solo-Leveling acompanha a história de Sung
+                        Jin Woo o caçador mais fraco do mundo. No mundo de Solo-Leveling, portais começaram a aparecer
+                        de forma aleatória, assustando a humanidade que não tinha como se defender, mas não muito
+                        tempo depois dos portais, humanos despertados começaram a surgir, tendo poderes e força o
+                        suficiente para fechar os portais, dentre esses despertados havia um rank que os categorizava,
+                        esses ranks eram, Rank-E, Rank-D, Rank-C, Rank-B, Rank-A, Rank-S e finalmente os Caçadores de
+                        Nivel Nacional sendo eles caçadores que sozinhos poderiam dominar um país inteiro. Nós leitores
+                        acompanhamos a histório de Sung Jin Woo e seu desempenho para deixar o seu titulo de caçador
+                        mais fraco do mundo para trás. Uma história emocionante e cheia de lutas épicas e divertidas de
+                        se ver.</strong></p>
                 <a href="https://mangalivre.net/manga/solo-leveling/7702" target="_blank" class="solo"> Clique para
                     conhecer!</a>
             </li>
@@ -101,7 +98,7 @@
         </div>
         <ul class="listagem_protagonista">
             <li class="cartao_protagonista">
-                
+
                 <ul class="unico">
                     <li class="unico_rank">Dono da porra toda</li>
                     <li class="forma_de_luta_do_sung">Necromancia</li>
@@ -121,14 +118,13 @@
         <ul class="listagem">
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Familia</span>
-                    <span>001#Park Kyung-Hye</span>
+                    <span>Park Kyung-Hye</span>
                 </div>
 
                 <img src="./Imagem/Park Kyung-Hye.jpg" alt="mãe do sung" class="imagem_png">
 
                 <ul class="ranks">
-                    <li class="sem_rank">Não despertada</li>
+                    <li class="sem_rank">Sem Rank</li>
                     <li class="forma_de_luta">Nenhuma</li>
                 </ul>
 
@@ -141,8 +137,7 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Familia</span>
-                    <span>002#Sung IL-Hwan</span>
+                    <span>Sung IL-Hwan</span>
                 </div>
 
                 <img src="./Imagem/Sung IL-Hwan.jpg" alt="irmã do sung" class="imagem_png">
@@ -163,14 +158,13 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Familia</span>
-                    <span>003#Jin-Ah</span>
+                    <span>Jin-Ah</span>
                 </div>
 
                 <img src="./Imagem/Jin-Ah2.png" alt="irmã do sung" class="imagem_png">
 
                 <ul class="ranks">
-                    <li class="sem_rank">Não despertada</li>
+                    <li class="sem_rank">Sem Rank</li>
                     <li class="forma_de_luta">Nenhuma</li>
                 </ul>
 
@@ -185,15 +179,14 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Familia</span>
-                    <span>004#Cha Hae-In</span>
+                    <span>Cha Hae-In</span>
                 </div>
 
                 <img src="./Imagem/cha_hae-in2.jpg" alt="esposa do sung jin woo" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="rank_s">Rank-S</li>
-                    <li class="forma_de_luta">Qualquer espada.</li>
+                    <li class="forma_de_luta">Espadas</li>
                 </ul>
 
                 <p class="descricao">Tem uma forte sencibilidade á cheiros, sendo eles fracos ou fortes, podendo até
@@ -204,15 +197,14 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Familia</span>
-                    <span>005#Yoo Jin-Ho</span>
+                    <span>Yoo Jin-Ho</span>
                 </div>
 
                 <img src="./Imagem/yoo jin-ho2.jpg" alt="melhor amigo do sung" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="rank_d">Rank-D</li>
-                    <li class="forma_de_luta">Picareta encantada</li>
+                    <li class="forma_de_luta">Picareta</li>
                 </ul>
 
                 <p class="descricao">Filho do dono da rede de empresas Yoo Jin arcteturas, desistiu de assumir a empresa
@@ -227,7 +219,6 @@
         <ul class="listagem">
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Inimigos</span>
                     <span>Estatua</span>
                 </div>
 
@@ -245,8 +236,7 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Inimigos</span>
-                    <span>001#Hwang Dong-Soo</span>
+                    <span>Hwang Dong-Soo</span>
                 </div>
 
                 <img src="./Imagem/Hwang Dong-Su.jpg" alt="inimigo" class="imagem_png">
@@ -265,15 +255,14 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Inimigos</span>
-                    <span>002#Monarca do Gelo</span>
+                    <span>Monarca do Gelo</span>
                 </div>
 
                 <img src="./Imagem/Monarca do Gelo.jpg" alt="inimigo" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="monarca">Monarca</li>
-                    <li class="forma_de_luta">Magia de Gelo</li>
+                    <li class="forma_de_luta">Magia</li>
                 </ul>
 
                 <p class="descricao">O monarca do gelo, um dos monarcas que vem atrás de Sung Jin Woo, para mata-lo, e
@@ -285,8 +274,7 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Inimigos</span>
-                    <span>003#Monarca das Feras</span>
+                    <span>Monarca das Feras</span>
                 </div>
 
                 <img src="./Imagem/Monarca das Feras2.jpg" alt="inimigo" class="imagem_png">
@@ -305,15 +293,14 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Inimigos</span>
-                    <span>004#Querehsha</span>
+                    <span>Querehsha</span>
                 </div>
 
                 <img src="./Imagem/Monarca dos Insetos.jpg" alt="inimigo" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="monarca">Monarca</li>
-                    <li class="forma_de_luta">Insetos Controlados</li>
+                    <li class="forma_de_luta">Pragas</li>
                 </ul>
 
                 <p class="descricao">Umas das primeiras a morrer na luta que ocorre na cidade entra Sung Jin Woo e os
@@ -324,15 +311,14 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Inimigos</span>
-                    <span>005#Baran</span>
+                    <span>Baran</span>
                 </div>
 
                 <img src="./Imagem/Monarca das Chamas Brancas2.PNG" alt="inimigo" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="monarca">Monarca</li>
-                    <li class="forma_de_luta">Espada de Raios</li>
+                    <li class="forma_de_luta">Adagas</li>
                 </ul>
 
                 <p class="descricao">Não teve muita relevância no Manhwa, mas foi um dos monarcas que participaram da
@@ -343,8 +329,7 @@
 
             <li class="cartao">
                 <div class="informacoes">
-                    <span>Inimigos</span>
-                    <span>006#Legia</span>
+                    <span>Legia</span>
                 </div>
 
                 <img src="./Imagem/Monarca dos Gigantes2.jpg" alt="inimigo" class="imagem_png">
@@ -366,16 +351,15 @@
     <section class="cards_aliados">
         <ul class="listagem">
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>001#Igris</span>
+                <div class="informacoes">
+                    <span>Igris</span>
                 </div>
 
                 <img src="./Imagem/igris2.PNG" alt="sombra" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="rank_ss">Rank-SS</li>
-                    <li class="forma_de_luta">Espada Longa</li>
+                    <li class="forma_de_luta">Espadas</li>
                 </ul>
 
                 <p class="descricao">A primeira sombra de Rank-S do nosso protagonista, o ajudou em muitos momentos de
@@ -386,9 +370,8 @@
             </li>
 
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>002#Beru</span>
+                <div class="informacoes">
+                    <span>Beru</span>
                 </div>
 
                 <img src="./Imagem/Beru2.PNG" alt="sombra" class="imagem_png">
@@ -406,16 +389,15 @@
             </li>
 
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>003#Iron</span>
+                <div class="informacoes">
+                    <span>Iron</span>
                 </div>
 
                 <img src="./Imagem/Iron.PNG" alt="sombra" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="rank_ss">Rank-A</li>
-                    <li class="forma_de_luta">Machado Pesado</li>
+                    <li class="forma_de_luta">Machado</li>
                 </ul>
 
                 <p class="descricao">Antes de se tornar uma sombra, era um humano de Rank-A, que desprezava caçadores de
@@ -426,9 +408,8 @@
             </li>
 
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>004#Tank</span>
+                <div class="informacoes">
+                    <span>Tank</span>
                 </div>
 
                 <img src="./Imagem/Tank.PNG" alt="sombra" class="imagem_png">
@@ -445,9 +426,8 @@
             </li>
 
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>005#Greed</span>
+                <div class="informacoes">
+                    <span>Greed</span>
                 </div>
 
                 <img src="./Imagem/Greed.PNG" alt="sombra" class="imagem_png">
@@ -464,16 +444,15 @@
             </li>
 
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>006#Bellion</span>
+                <div class="informacoes">
+                    <span>Bellion</span>
                 </div>
 
                 <img src="./Imagem/Bellion.PNG" alt="sombra" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="rank_ss">Rank-SS</li>
-                    <li class="forma_de_luta">Espada Chicote</li>
+                    <li class="forma_de_luta">Espadas</li>
                 </ul>
 
                 <p class="descricao">General do exercito do antigo Monarca das Sombras, desce dos céus, saindo de um
@@ -484,16 +463,15 @@
             </li>
 
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>007#Kaisel</span>
+                <div class="informacoes">
+                    <span>Kaisel</span>
                 </div>
 
                 <img src="./Imagem/Wyvern.PNG" alt="sombra" class="imagem_png">
 
                 <ul class="ranks">
                     <li class="rank_ss">Rank-S</li>
-                    <li class="forma_de_luta">Bafo de dragão</li>
+                    <li class="forma_de_luta">Magia</li>
                 </ul>
 
                 <p class="descricao">Dração do Monarca dos Demonios, se tornou sombra de Sung, após Sung derrotar o
@@ -503,9 +481,8 @@
             </li>
 
             <li class="cartao">
-                <div calss="informacoes">
-                    <span>Aliados</span>
-                    <span>008#Ashborn</span>
+                <div class="informacoes">
+                    <span>Ashborn</span>
                 </div>
 
                 <img src="./Imagem/ashborn.PNG" alt="sombra" class="imagem_png">
